[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/3Dglobe.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/bglayer1.jpg" type="Texture" id=2]
[ext_resource path="res://Scripts/Background.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://AllertaStencil-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Buttons/Previous/left1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/Previous/left2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/Previous/left3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/Next/right1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/Next/right2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Buttons/Next/right3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Buttons/Play/normal.png" type="Texture" id=12]
[ext_resource path="res://Assets/Buttons/Play/pressed.png" type="Texture" id=13]
[ext_resource path="res://Assets/Buttons/Play/hover.png" type="Texture" id=14]
[ext_resource path="res://Scenes/VolumeSlider.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/SFX_Slider.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=4]
size = 80
extra_spacing_char = 7
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.85098, 0.807843, 0.317647 )

[sub_resource type="DynamicFont" id=3]
size = 27
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="UI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="RichTextLabel2" type="RichTextLabel" parent="UI"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 160.0
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]ATOM[center]"
text = "ATOM"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="UI"]
margin_left = 412.0
margin_top = 485.0
margin_right = 612.0
margin_bottom = 585.0
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]test[center]"
text = "test"

[node name="Previous" type="TextureButton" parent="UI"]
margin_left = 380.0
margin_top = 480.0
margin_right = 588.0
margin_bottom = 720.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Next" type="TextureButton" parent="UI"]
margin_left = 612.0
margin_top = 480.0
margin_right = 820.0
margin_bottom = 720.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="Button" type="TextureButton" parent="UI"]
margin_left = 453.0
margin_top = 550.0
margin_right = 1043.0
margin_bottom = 740.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )

[node name="VolumeSlider" parent="UI" instance=ExtResource( 15 )]
margin_left = 992.0
margin_top = 492.0
margin_right = 1008.0
margin_bottom = 592.0

[node name="SFX_Slider" parent="UI" instance=ExtResource( 16 )]
margin_left = 944.0
margin_top = 492.0
margin_right = 960.0
margin_bottom = 592.0

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 500, 500 )
own_world = true
transparent_bg = true
msaa = 4
render_target_v_flip = true

[node name="Globe" parent="Viewport" instance=ExtResource( 1 )]

[node name="Globe" type="Sprite" parent="."]
position = Vector2( 512, 250 )
texture = SubResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1536, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 518, 315 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="AudioPlayer2D" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="UI/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="UI/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="UI/Button" to="." method="_on_Button_pressed"]
